bare_err_tree/test_cases/std/fail_src/early_clone_derive.stderr
error[E0063]: missing field `_err_tree_pkg` in initializer of `ErrStruct`
  --> test_cases/std/fail_src/early_clone_derive.rs:17:10
   |
17 | #[derive(Clone)]
   |          ^ missing `_err_tree_pkg`
   |
   = note: this error originates in the derive macro `Clone` (in Nightly builds, run with -Z macro-backtrace for more info)
